Add new games functionality with internationalization support
- Implemented i18n module for language management and translations.
- Created new game engine to handle game logic and user interactions.
- Developed menu for game selection with dynamic content loading.
- Added QA script for validating game configurations and structure.
- Established a registry for managing game metadata and levels.
- Integrated language change events to update UI dynamically.

--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "languageLabel":  "Idioma",
     "languageSelectAria":  "Elegir idioma",
     "confirmLogout":  "¿Quieres salir?",
@@ -200,5 +200,57 @@
     "storyReviewExplain":  "Recuerda el cuento: {{answer}}.",
     "menuNoLevels":  "No hay niveles disponibles por ahora.",
     "reviewFinish":  "Terminar el repaso",
-    "sortingDragHint":  "Arrástralos y suéltalos en la cesta correcta."
+    "sortingDragHint":  "Arrástralos y suéltalos en la cesta correcta.",
+    "subtractTransformHint":  "Si faltan unidades, transforma una decena.",
+    "gameMultDivSubtitle":  "Une multiplicaciones y divisiones.",
+    "buildNumberHintEasy":  "Primero las decenas, luego las unidades.",
+    "halfGamePrompt":  "La mitad de {{value}} = ?",
+    "buildNumberHintHard":  "Comprueba la suma.",
+    "subtractTransformTarget":  "{{minuend}} - {{subtrahend}}",
+    "gamePageTitle":  "App de Lena - Juego",
+    "gamePlaceValueSubtitle":  "Compón y descompón números.",
+    "gamePlaceValueTitle":  "Decenas y unidades",
+    "gameFeedbackCorrect":  "¡Bien!",
+    "gameWordProblemsSubtitle":  "Lee y elige la respuesta.",
+    "subtractTransformReset":  "Reiniciar",
+    "gameSubtractTransformTitle":  "Restar es transformar",
+    "gameNumberLineTitle":  "Recta numérica",
+    "placeValueComposePrompt":  "{{tens}} decenas y {{ones}} unidades son...",
+    "halfGameHint":  "Divide por 2.",
+    "numberLinePromptSub":  "Empieza en {{start}} y salta -{{step}} ({{jumps}} veces).",
+    "gameNumberLineSubtitle":  "Saltos en la recta.",
+    "buildNumberTargetLabel":  "Construye {{target}}",
+    "multDivPrompt":  "Elige la familia de {{a}} y {{b}}.",
+    "gameAutoMode":  "Auto",
+    "gameBackToMenu":  "Volver al menú",
+    "halfGameHintEasy":  "Divide en dos partes iguales.",
+    "placeValueDecomposePrompt":  "Descompón {{number}}.",
+    "subtractTransformRemoved":  "Quitados: {{count}}",
+    "subtractTransformNoTen":  "No quedan decenas para transformar.",
+    "gameProgressText":  "Ejercicio {{current}} / {{total}}",
+    "buildNumberTutorialStep2":  "Ejemplo: 23 = 2 decenas + 3 unidades.",
+    "wordProblemCoins":  "monedas",
+    "subtractTransformTransform":  "Transformar una decena",
+    "buildNumberPrompt":  "Construye el número {{target}}",
+    "subtractTransformPrompt":  "Transforma y resta {{subtrahend}} de {{minuend}}.",
+    "gameHalfTitle":  "La mitad",
+    "wordProblemStickers":  "pegatinas",
+    "wordProblemPromptSub":  "{{a}} {{item}} - {{b}} {{item}}. ¿Cuántos quedan?",
+    "gameHalfSubtitle":  "Encuentra la mitad.",
+    "gameBuildNumberSubtitle":  "Forma con decenas y unidades.",
+    "wordProblemHint":  "Mira si se suma o se resta.",
+    "buildNumberTutorialTitle":  "Tutorial: construir un número",
+    "placeValueDecomposeOption":  "{{tens}}D + {{ones}}U",
+    "numberLinePromptAdd":  "Empieza en {{start}} y salta +{{step}} ({{jumps}} veces).",
+    "gameWordProblemsTitle":  "Problemas cortos",
+    "gameMultDivTitle":  "Familias × ÷",
+    "buildNumberHintMid":  "Piensa en grupos de 10.",
+    "wordProblemPromptAdd":  "{{a}} {{item}} + {{b}} {{item}}. ¿Cuántos hay?",
+    "gameSubtractTransformSubtitle":  "Transforma una decena para quitar.",
+    "subtractTransformHelp":  "Transforma una decena para tener unidades.",
+    "halfGamePromptStory":  "Hay {{total}} pegatinas. La mitad = ?",
+    "buildNumberTutorialStep1":  "Un número se forma con decenas y unidades.",
+    "wordProblemCandies":  "caramelos",
+    "gameFeedbackRetry":  "Inténtalo otra vez.",
+    "gameBuildNumberTitle":  "Construye el número"
 }
