--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "languageLabel":  "Langue",
     "languageSelectAria":  "Choisir la langue",
     "confirmLogout":  "Veux-tu vraiment te déconnecter ?",
@@ -200,5 +200,57 @@
     "itemDailyQuiz":  "Quiz du Jour",
     "itemBreath":  "Respire \u0026 Repose-toi",
     "itemSelfExpression":  "Expression de Soi / Mon Journal",
-    "colorMixQuestion":  "Quelle couleur apparaît quand on mélange {{a}} + {{b}} ?"
+    "colorMixQuestion":  "Quelle couleur apparaît quand on mélange {{a}} + {{b}} ?",
+    "subtractTransformHint":  "Si tu manques d\u0027unités, transforme une dizaine.",
+    "gameMultDivSubtitle":  "Associe multiplications et divisions.",
+    "buildNumberHintEasy":  "Commence par les dizaines, puis ajoute les unités.",
+    "halfGamePrompt":  "La moitié de {{value}} = ?",
+    "buildNumberHintHard":  "Vérifie la somme des dizaines et unités.",
+    "subtractTransformTarget":  "{{minuend}} - {{subtrahend}}",
+    "gamePageTitle":  "App de Lena - Jeu",
+    "gamePlaceValueSubtitle":  "Compose et décompose les nombres.",
+    "gamePlaceValueTitle":  "Dizaines et unités",
+    "gameFeedbackCorrect":  "Bravo !",
+    "gameWordProblemsSubtitle":  "Lis et choisis la réponse.",
+    "subtractTransformReset":  "Recommencer",
+    "gameSubtractTransformTitle":  "Soustraire, c\u0027est transformer",
+    "gameNumberLineTitle":  "Droite numérique",
+    "placeValueComposePrompt":  "{{tens}} dizaines et {{ones}} unités font...",
+    "halfGameHint":  "Divise par 2.",
+    "numberLinePromptSub":  "Pars de {{start}} et saute de -{{step}} ({{jumps}} fois).",
+    "gameNumberLineSubtitle":  "Saute sur la ligne.",
+    "buildNumberTargetLabel":  "Construis {{target}}",
+    "multDivPrompt":  "Choisis la famille de {{a}} et {{b}}.",
+    "gameAutoMode":  "Auto",
+    "gameBackToMenu":  "Retour au menu",
+    "halfGameHintEasy":  "Coupe le nombre en deux parts égales.",
+    "placeValueDecomposePrompt":  "Décompose {{number}}.",
+    "subtractTransformRemoved":  "Retirés : {{count}}",
+    "subtractTransformNoTen":  "Plus de dizaine à transformer.",
+    "gameProgressText":  "Exercice {{current}} / {{total}}",
+    "buildNumberTutorialStep2":  "Exemple : 23 = 2 dizaines + 3 unités.",
+    "wordProblemCoins":  "pièces",
+    "subtractTransformTransform":  "Transformer une dizaine",
+    "buildNumberPrompt":  "Construis le nombre {{target}}",
+    "subtractTransformPrompt":  "Transforme puis retire {{subtrahend}} de {{minuend}}.",
+    "gameHalfTitle":  "La moitié",
+    "wordProblemStickers":  "stickers",
+    "wordProblemPromptSub":  "{{a}} {{item}} - {{b}} {{item}}. Combien restent ?",
+    "gameHalfSubtitle":  "Trouve la moitié d\u0027un nombre.",
+    "gameBuildNumberSubtitle":  "Compose avec dizaines et unités.",
+    "wordProblemHint":  "Repère si on ajoute ou on retire.",
+    "buildNumberTutorialTitle":  "Tutoriel : construire un nombre",
+    "placeValueDecomposeOption":  "{{tens}}D + {{ones}}U",
+    "numberLinePromptAdd":  "Pars de {{start}} et saute de +{{step}} ({{jumps}} fois).",
+    "gameWordProblemsTitle":  "Problèmes courts",
+    "gameMultDivTitle":  "Familles × ÷",
+    "buildNumberHintMid":  "Pense aux paquets de 10.",
+    "wordProblemPromptAdd":  "{{a}} {{item}} + {{b}} {{item}}. Combien au total ?",
+    "gameSubtractTransformSubtitle":  "On transforme une dizaine pour enlever.",
+    "subtractTransformHelp":  "Transforme une dizaine pour avoir assez d\u0027unités.",
+    "halfGamePromptStory":  "Il y a {{total}} autocollants. La moitié = ?",
+    "buildNumberTutorialStep1":  "Un nombre peut être fait avec des dizaines et des unités.",
+    "wordProblemCandies":  "bonbons",
+    "gameFeedbackRetry":  "Essaie encore.",
+    "gameBuildNumberTitle":  "Construis le nombre"
 }
