--- a/assets/i18n/nl.json
+++ b/assets/i18n/nl.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "languageLabel":  "Taal",
     "languageSelectAria":  "Taal kiezen",
     "confirmLogout":  "Wil je echt uitloggen?",
@@ -200,5 +200,57 @@
     "itemDailyQuiz":  "Quiz van de dag",
     "itemBreath":  "Adem en rust",
     "itemSelfExpression":  "Zelfexpressie / Mijn dagboek",
-    "colorMixQuestion":  "Welke kleur krijg je als we {{a}} + {{b}} mengen?"
+    "colorMixQuestion":  "Welke kleur krijg je als we {{a}} + {{b}} mengen?",
+    "subtractTransformHint":  "Als je te weinig eenheden hebt, breek een tiental.",
+    "gameMultDivSubtitle":  "Koppel vermenigvuldigen en delen.",
+    "buildNumberHintEasy":  "Eerst tientallen, dan eenheden.",
+    "halfGamePrompt":  "De helft van {{value}} = ?",
+    "buildNumberHintHard":  "Controleer de som.",
+    "subtractTransformTarget":  "{{minuend}} - {{subtrahend}}",
+    "gamePageTitle":  "Lena app - Spel",
+    "gamePlaceValueSubtitle":  "Stel samen en ontleed.",
+    "gamePlaceValueTitle":  "Tientallen en eenheden",
+    "gameFeedbackCorrect":  "Goed gedaan!",
+    "gameWordProblemsSubtitle":  "Lees en kies het antwoord.",
+    "subtractTransformReset":  "Opnieuw",
+    "gameSubtractTransformTitle":  "Aftrekken is transformeren",
+    "gameNumberLineTitle":  "Getallenlijn",
+    "placeValueComposePrompt":  "{{tens}} tientallen en {{ones}} eenheden zijn...",
+    "halfGameHint":  "Deel door 2.",
+    "numberLinePromptSub":  "Start bij {{start}} en spring -{{step}} ({{jumps}} keer).",
+    "gameNumberLineSubtitle":  "Spring op de lijn.",
+    "buildNumberTargetLabel":  "Bouw {{target}}",
+    "multDivPrompt":  "Kies de familie van {{a}} en {{b}}.",
+    "gameAutoMode":  "Auto",
+    "gameBackToMenu":  "Terug naar menu",
+    "halfGameHintEasy":  "Verdeel in twee gelijke delen.",
+    "placeValueDecomposePrompt":  "Ontleed {{number}}.",
+    "subtractTransformRemoved":  "Weggenomen: {{count}}",
+    "subtractTransformNoTen":  "Geen tientallen meer om te breken.",
+    "gameProgressText":  "Oefening {{current}} / {{total}}",
+    "buildNumberTutorialStep2":  "Voorbeeld: 23 = 2 tientallen + 3 eenheden.",
+    "wordProblemCoins":  "munten",
+    "subtractTransformTransform":  "Breek een tiental",
+    "buildNumberPrompt":  "Bouw het getal {{target}}",
+    "subtractTransformPrompt":  "Transformeer en haal {{subtrahend}} weg van {{minuend}}.",
+    "gameHalfTitle":  "De helft",
+    "wordProblemStickers":  "stickers",
+    "wordProblemPromptSub":  "{{a}} {{item}} - {{b}} {{item}}. Hoeveel over?",
+    "gameHalfSubtitle":  "Zoek de helft.",
+    "gameBuildNumberSubtitle":  "Maak met tientallen en eenheden.",
+    "wordProblemHint":  "Kijk of je optelt of aftrekt.",
+    "buildNumberTutorialTitle":  "Tutorial: bouw het getal",
+    "placeValueDecomposeOption":  "{{tens}}T + {{ones}}E",
+    "numberLinePromptAdd":  "Start bij {{start}} en spring +{{step}} ({{jumps}} keer).",
+    "gameWordProblemsTitle":  "Korte problemen",
+    "gameMultDivTitle":  "Families × ÷",
+    "buildNumberHintMid":  "Denk aan groepjes van 10.",
+    "wordProblemPromptAdd":  "{{a}} {{item}} + {{b}} {{item}}. Hoeveel samen?",
+    "gameSubtractTransformSubtitle":  "Breek een tiental om weg te nemen.",
+    "subtractTransformHelp":  "Breek een tiental om genoeg eenheden te hebben.",
+    "halfGamePromptStory":  "Er zijn {{total}} stickers. De helft = ?",
+    "buildNumberTutorialStep1":  "Een getal bestaat uit tientallen en eenheden.",
+    "wordProblemCandies":  "snoepjes",
+    "gameFeedbackRetry":  "Probeer opnieuw.",
+    "gameBuildNumberTitle":  "Bouw het getal"
 }
